# mtg-scraper

./: .gitignore  README.md  group.py  main.py  pyproject.toml  requirements.txt  shop.py
